# NURELabsPI

./: README.md
Course3/APZ/: CMakeLists.txt
Course3/APZ/Arduino/: Arduino.ino
Course3/APZ/Arduino/Service/: CMakeLists.txt  main.cpp  w32.cpp  w32.h
Course3/APZ/CMake/: CompilePages.cmake  FindAPR.cmake  FindApache2.cmake
Course3/APZ/Mobile/: README  build.gradle  settings.gradle
Course3/APZ/Mobile/app/: build.gradle
Course3/APZ/Mobile/gradle/wrapper/: gradle-wrapper.properties
Course3/APZ/Server/: CMakeLists.txt  PCH.h  ServerCore.cpp  Utility.h
Course3/APZ/Server/API/: BaseApi.cpp  BaseApi.h  CategoryApi.cpp  CategoryApi.h  ContentApi.cpp  ContentApi.h  IoTApi.cpp  IoTApi.h  LangApi.h  MobileApi.cpp  MobileApi.h  ProductApi.cpp  ProductApi.h  UserApi.cpp  UserApi.h  WarehouseApi.cpp  WarehouseApi.h  WebPageStateApi.cpp  WebPageStateApi.h
Course3/APZ/Server/Config/: any.pem  gencert.bat  rootcert.pem  settings.properties
Course3/APZ/Server/Config/Localization/: en.loc  ua.loc
Course3/APZ/Server/Content/: index.html
Course3/APZ/Server/Content/css/: style.css
Course3/APZ/Server/Core/: BaseRequestFactory.cpp  BaseRequestFactory.h  MobRequestFactory.cpp  MobRequestFactory.h  WebRequestFactory.cpp  WebRequestFactory.h
Course3/APZ/Server/Database/: dump.sql  pull.bat  push.bat
Course3/APZ/Server/Logic/: Category.h  CategoryTable.cpp  CategoryTable.h  Product.h  ProductTable.cpp  ProductTable.h  Warehouse.h  WarehouseTable.cpp  WarehouseTable.h
Course3/APZ/Server/Shared/: DatabaseSystem.cpp  DatabaseSystem.h  EmailSystem.cpp  EmailSystem.h  IObject.h  LocalizationSystem.cpp  LocalizationSystem.h  ServerContext.h
Course3/APZ/Server/Web/: CookiesManager.cpp  CookiesManager.h  ICookieDependentObject.h  IPageControllerObject.h  Localization.h  PageManager.cpp  PageManager.h  User.cpp  User.h  WebContext.h
Course3/APZ/Server/WebPages/: _admin_categories.cpsp  _admin_form_addprod.cpsp  _admin_form_regcat.cpsp  _admin_form_regware.cpsp  _admin_warehouses.cpsp  _error_label.cpsp  _form_addprod.cpsp  _form_login.cpsp  _form_register.cpsp  _form_useredit.cpsp  _home_admin.cpsp  _home_client.cpsp  _navbar.cpsp  _navbar_logged.cpsp  _navbar_not_logged.cpsp  _products.cpsp  index.cpsp
Course3/APZ/Utility/: CMakeLists.txt
Course3/APZ/Utility/NSSM/: service_install.bat  service_uninstall.bat
Course3/APZ/Utility/PageCompiler/: ApacheCodeWriter.cpp  ApacheCodeWriter.h  CMakeLists.txt  CodeWriter.cpp  CodeWriter.h  OSPCodeWriter.cpp  OSPCodeWriter.h  Page.cpp  Page.h  PageCompiler.cpp  PageReader.cpp  PageReader.h
Course3/BPtD/Labs/: CMakeLists.txt
Course3/BPtD/Labs/Lab1/: CMakeLists.txt
Course3/BPtD/Labs/Lab1/Alg/: CMakeLists.txt  des.c  des.h
Course3/BPtD/Labs/Lab1/Gui/: CMainDialog.cpp  CMainDialog.h  CMakeLists.txt  FormSrc.fbp  GeneratedWindow.cpp  GeneratedWindow.h
Course3/BPtD/Labs/Lab1/Tests/: CMakeLists.txt  main.cpp
Course3/BPtD/Labs/Lab2/: CMakeLists.txt
Course3/BPtD/Labs/Lab2/Client/: Lab2Client.csproj  Lab2Client.sln  MainForm.Designer.cs  MainForm.cs  Program.cs  packages.config
Course3/BPtD/Labs/Lab2/Server/: CCryptor.cpp  CCryptor.h  CMainDialog.cpp  CMainDialog.h  CMakeLists.txt  CServer.cpp  CServer.h  FormSrc.fbp  GeneratedWindow.cpp  GeneratedWindow.h  main.cpp
Course3/BPtD/Labs/Lab3/: CMainDialog.cpp  CMainDialog.h  CMakeLists.txt  FormSrc.fbp  GeneratedWindow.cpp  GeneratedWindow.h  hash.c  hash.h  main.cpp
Course3/BPtD/Labs/Lab4/: CMakeLists.txt  main.cpp
Course3/BPtD/Labs/Lab4/Alg/: CDiffiHellman.cpp  CDiffiHellman.h
Course3/BPtD/Labs/Lab4/Chat/: CChatClient.cpp  CChatClient.h  CChatMessage.cpp  CChatMessage.h  CChatServer.cpp  CChatServer.h  INetwork.cpp  INetwork.h
Course3/BPtD/Labs/Lab4/GUI/: CMainDialog.cpp  CMainDialog.h  FormSrc.fbp  GeneratedWindow.cpp  GeneratedWindow.h
Course3/BPtD/Labs/SDK/PugiXML/: CMakeLists.txt
Course3/BPtD/PZ/Pz3/: CMakeLists.txt  client.cpp  message.h  server.cpp
Course3/MOTI/: CMakeLists.txt
Course3/MOTI/Lab1-4/: AlternativesDialog.cpp  AlternativesDialog.h  CMakeLists.txt  ComparisonDialog.cpp  ComparisonDialog.h  CriterionsDialog.cpp  CriterionsDialog.h  DatabaseData.h  DatabaseUtility.h  DatabaseView.cpp  DatabaseView.h  Dialogs.fbp  GeneratedWindows.cpp  GeneratedWindows.h  IDatabaseDialog.h  MainApplication.cpp  MainDialog.cpp  MainDialog.h  UsersDialog.cpp  UsersDialog.h  dump.sql
Course3/MOTI/Lab5/: CMakeLists.txt  Forms.fbp  GeneratedWindows.cpp  GeneratedWindows.h  MainApplication.cpp  MainWindow.cpp  MainWindow.h
Course3/MOTI/nanodbc/: CMakeLists.txt  nanodbc.cpp  nanodbc.h
Course3/ParP/: CMakeLists.txt  Lab1.cpp  Lab2.cpp  Lab3.cpp  Lab4.cpp  Lab5File1  Lab5File2  Lab5Par.cpp  Lab5Seq.cpp  bench.h  matrix.h
Course4/OIAD/: CMakeLists.txt
Course4/OIAD/Lab1/: CMakeLists.txt  MessageAnalyzer.cpp  MessageAnalyzer.h  WordsCounter.cpp  WordsCounter.h  WordsProbabilities.cpp  WordsProbabilities.h  main.cpp
Course4/OIAD/Lab1/data/: learn_nonspam_2.txt  learn_nonspam_3.txt  learn_nonspam_4.txt  learn_nonspam_5.txt  learn_nonspam_6.txt  learn_spam_1.txt  learn_spam_2.txt  learn_spam_3.txt  learn_spam_4.txt  learn_spam_5.txt  learn_spam_6.txt  test_nonspam_1.txt  test_nonspam_2.txt  test_nonspam_3.txt  test_spam_1.txt  test_spam_2.txt  test_spam_3.txt
Course4/OIAD/Lab2/: CMakeLists.txt  Clusterise.cpp  Clusterise.h  PolygonUtil.cpp  PolygonUtil.h  Renderer.cpp  Renderer.h  SimilarityMatrix.h  main.cpp
CourseProjects/Course3/Source/Arduino/Service/: CMakeLists.txt  arduino_service.h  common.cpp  common.h  main.cpp
CourseProjects/Course3/Source/Launcher/: CMakeLists.txt  Server.cpp
CourseProjects/Course3/Source/Server/: CMakeLists.txt
CourseProjects/Course3/Source/Server/API/: InvalidRequest.cpp  InvalidRequest.h  RequestFactory.cpp  RequestFactory.h  RequestHandler.cpp  RequestHandler.h  RequestParser.cpp  RequestParser.h
CourseProjects/Course3/Source/Server/Common/: JsonObject.h  JsonReadObject.cpp  JsonReadObject.h  JsonWriteObject.cpp  JsonWriteObject.h  ServerException.h  SqlObject.cpp  SqlObject.h  StringUtility.cpp  StringUtility.h
(+509 files in other folders)
