CMAKE_MINIMUM_REQUIRED (VERSION 3.2)

IF (COMMAND CMAKE_POLICY)
	CMAKE_POLICY (SET CMP0063 NEW)
	CMAKE_POLICY (SET CMP0074 NEW)
ENDIF ()

SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS ON)
SET (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
SET (CMAKE_RESOURCE_DIRECTORY "${CMAKE_BINARY_DIR}/share")
SET (COTIRE_MINIMUM_NUMBER_OF_TARGET_SOURCES 1)
SET (CMAKE_CODEBLOCKS_EXCLUDE_EXTERNAL_FILES ON)

PROJECT (APZ_Project)

INCLUDE (GenerateExportHeader REQUIRED)
INCLUDE (cotire REQUIRED)

FIND_PACKAGE (Boost REQUIRED)
FIND_PACKAGE (OpenSSL REQUIRED)
FIND_PACKAGE (ODBC REQUIRED)
FIND_PACKAGE (Poco COMPONENTS Foundation Util JSON XML Net Data DataODBC NetSSL Crypto REQUIRED)

IF (WIN32)
	FOREACH (Poco_LIBRARY ${Poco_LIBRARIES})
		GET_TARGET_PROPERTY (Poco_IMPORTED_LOCATION ${Poco_LIBRARY} IMPORTED_LOCATION_RELEASE)
		FILE (RELATIVE_PATH Poco_IMPORTED_LOCATION_REL ${Poco_DIR} ${Poco_IMPORTED_LOCATION})
		STRING (REPLACE "../" "" Poco_IMPORTED_LOCATION_REL ${Poco_IMPORTED_LOCATION_REL})
		STRING (REPLACE "bin/" "" Poco_IMPORTED_LOCATION_REL ${Poco_IMPORTED_LOCATION_REL})
		STRING (REPLACE "lib/" "" Poco_IMPORTED_LOCATION_REL ${Poco_IMPORTED_LOCATION_REL})
		CONFIGURE_FILE (${Poco_IMPORTED_LOCATION} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${Poco_IMPORTED_LOCATION_REL} COPYONLY)
		INSTALL (FILES ${Poco_IMPORTED_LOCATION} DESTINATION "bin")
	ENDFOREACH ()
ENDIF ()

ADD_SUBDIRECTORY (Utility)
ADD_SUBDIRECTORY (Server)
ADD_SUBDIRECTORY (Arduino/Service)
