CMAKE_MINIMUM_REQUIRED (VERSION 2.8.3)

IF (COMMAND CMAKE_POLICY)
	CMAKE_POLICY (SET CMP0043 NEW)
	CMAKE_POLICY (SET CMP0045 NEW)
	CMAKE_POLICY (SET CMP0063 NEW)
	CMAKE_POLICY (SET CMP0080 NEW)
ENDIF ()

SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)

PROJECT (MOTILabs)

FIND_PACKAGE (ODBC REQUIRED)
FIND_PACKAGE (wxWidgets REQUIRED COMPONENTS core base)
INCLUDE (${wxWidgets_USE_FILE} REQUIRED)
INCLUDE (cotire REQUIRED)

OPTION (NANODBC_ENABLE_UNICODE "Enable UNICODE usage in nanodbc" TRUE)
IF (WIN32)
	OPTION (WIN32_SHOW_CONSOLE "Show console on Windows" TRUE)
ENDIF (WIN32)

IF (NANODBC_ENABLE_UNICODE)
	ADD_DEFINITIONS (-DNANODBC_ENABLE_UNICODE)
ENDIF (NANODBC_ENABLE_UNICODE)
ADD_SUBDIRECTORY (nanodbc)

ADD_SUBDIRECTORY (Lab1-4)
ADD_SUBDIRECTORY (Lab5)
