CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)

PROJECT (ParP_Labs)

FIND_PACKAGE (OpenMP REQUIRED)

ADD_EXECUTABLE (Lab1 Lab1.cpp bench.h matrix.h)
TARGET_LINK_LIBRARIES (Lab1 PRIVATE OpenMP::OpenMP_CXX)

ADD_EXECUTABLE (Lab2 Lab2.cpp)

ADD_EXECUTABLE (Lab3 Lab3.cpp bench.h)
TARGET_COMPILE_OPTIONS (Lab3 PRIVATE -march=native)

ADD_EXECUTABLE (Lab4 Lab4.cpp bench.h)
TARGET_LINK_LIBRARIES (Lab4 PRIVATE OpenMP::OpenMP_CXX)

ADD_EXECUTABLE (Lab5Seq Lab5Seq.cpp bench.h)

ADD_EXECUTABLE (Lab5Par Lab5Par.cpp bench.h)
TARGET_LINK_LIBRARIES (Lab5Par PRIVATE OpenMP::OpenMP_CXX)
