CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)

PROJECT (OIAD)

SET (CMAKE_CXX_STANDARD 20)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)

SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET (CMAKE_RESOURCE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/data)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)
IF (CMAKE_EXTRA_GENERATOR)
	IF ("${CMAKE_EXTRA_GENERATOR}" STREQUAL "CodeBlocks")
		SET (CMAKE_CODEBLOCKS_EXCLUDE_EXTERNAL_FILES ON)
	ELSEIF ("${CMAKE_EXTRA_GENERATOR}" STREQUAL "CodeLite")
		SET (CMAKE_CODELITE_USE_TARGETS ON)
		IF (NOT "${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
			EXECUTE_PROCESS (COMMAND
				${CMAKE_COMMAND} -E create_symlink
				${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
				${CMAKE_SOURCE_DIR}/compile_commands.json
			)
		ENDIF ()
	ENDIF ()
ENDIF ()

ADD_SUBDIRECTORY (Lab1)
ADD_SUBDIRECTORY (Lab2)
