SET (TARGET_NAME Server)

FILE (GLOB_RECURSE SOURCE_FILES *.cpp)
FILE (GLOB_RECURSE HEADER_FILES *.h)
ADD_EXECUTABLE (${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})

SET_TARGET_PROPERTIES (${TARGET_NAME} PROPERTIES
	VISIBILITY_INLINES_HIDDEN 1
	CXX_VISIBILITY_PRESET hidden
	COTIRE_CXX_PREFIX_HEADER_INIT "PCH.h"
)
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} SYSTEM PUBLIC ${Boost_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE ${Poco_LIBRARIES})
COTIRE (${TARGET_NAME})

INSTALL (TARGETS ${TARGET_NAME})

FUNCTION (RESOURCE_DIRECTORY SUBDIRECTORY)
	SET (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBDIRECTORY})
	FILE (GLOB_RECURSE CONTENT_FILES ${DIRECTORY}/*.* RELATIVE ${DIRECTORY} ${CMAKE_BINARY_DIR})
	FOREACH (CONTENT_FILE_IN ${CONTENT_FILES})
		FILE (RELATIVE_PATH CONTENT_FILE ${CMAKE_CURRENT_SOURCE_DIR} ${CONTENT_FILE_IN})
		CONFIGURE_FILE (${CONTENT_FILE_IN} ${CMAKE_RESOURCE_DIRECTORY}/${CONTENT_FILE} COPYONLY)
	ENDFOREACH ()
	INSTALL (DIRECTORY ${CMAKE_RESOURCE_DIRECTORY} DESTINATION .)
ENDFUNCTION ()

RESOURCE_DIRECTORY (Config)
RESOURCE_DIRECTORY (Content)
RESOURCE_DIRECTORY (Localization)
