CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

IF (COMMAND CMAKE_POLICY)
	CMAKE_POLICY (SET CMP0074 NEW)
ENDIF ()

PROJECT (BPtD)

SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET (CMAKE_CODEBLOCKS_EXCLUDE_EXTERNAL_FILES 1)

FIND_PACKAGE (Boost COMPONENTS system REQUIRED)
FIND_PACKAGE (OpenSSL REQUIRED)
FIND_PACKAGE (PugiXML REQUIRED)
FIND_PACKAGE (wxWidgets COMPONENTS core base net REQUIRED)

INCLUDE_DIRECTORIES (${wxWidgets_INCLUDE_DIRS})

ADD_SUBDIRECTORY (Lab1)
ADD_SUBDIRECTORY (Lab2)
ADD_SUBDIRECTORY (Lab3)
ADD_SUBDIRECTORY (Lab4)
