SET (TARGET_NAME Lab5)

FILE (GLOB SOURCE_FILES *.cpp)
FILE (GLOB HEADER_FILES *.h)
IF (WIN32 AND NOT WIN32_SHOW_CONSOLE)
	ADD_EXECUTABLE (${TARGET_NAME} WIN32 ${SOURCE_FILES} ${HEADER_FILES})
ELSE ()
	ADD_EXECUTABLE (${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})
ENDIF ()

TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} PRIVATE ${CMAKE_SOURCE_DIR} ${wxWidgets_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE ${wxWidgets_LIBRARIES})
SET_TARGET_PROPERTIES (${TARGET_NAME} PROPERTIES VISIBILITY_INLINES_HIDDEN 1 CXX_VISIBILITY_PRESET hidden)

COTIRE (${TARGET_NAME})
