FIND_PACKAGE (GLEW REQUIRED)
FIND_PACKAGE (GLM REQUIRED)
FIND_PACKAGE (SDL2 REQUIRED)

SET (TARGET_NAME Lab2)

FILE (GLOB SOURCE_FILES *.cpp)
FILE (GLOB HEADER_FILES *.h)

IF (WIN32)
	LIST (APPEND APP_MIDIFIERS WIN32)
ENDIF ()

ADD_EXECUTABLE (${TARGET_NAME} ${APP_MIDIFIERS} ${SOURCE_FILES} ${HEADER_FILES})
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} PRIVATE ${GLM_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE SDL2::SDL2 GLEW::glew)
