CMAKE_MINIMUM_REQUIRED (VERSION 3.2)

SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/../../bin")
SET (TARGET_NAME "PageCompiler")

PROJECT (${TARGET_NAME})

FIND_PACKAGE (Poco COMPONENTS Net Util XML JSON Foundation REQUIRED)

FILE (GLOB SOURCE_FILES "*.cpp")
FILE (GLOB HEADER_FILES "*.h" )

ADD_EXECUTABLE (${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})
SET_TARGET_PROPERTIES (${TARGET_NAME} PROPERTIES OUTPUT_NAME cpspc)
TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE ${Poco_LIBRARIES})
