SET (TARGET_NAME Lab4)

FILE (GLOB_RECURSE SOURCE_FILES *.cpp)
FILE (GLOB_RECURSE HEADER_FILES *.h)

ADD_EXECUTABLE (${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE ${wxWidgets_LIBRARIES} PugiXML)

IF (WIN32)
	TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE ws2_32 wsock32)
ENDIF ()
