CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

IF (COMMAND CMAKE_POLICY)
	CMAKE_POLICY (SET CMP0074 NEW)
ENDIF ()

PROJECT (BPtDPz3)

SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET (CMAKE_CODEBLOCKS_EXCLUDE_EXTERNAL_FILES 1)

FIND_PACKAGE (Threads REQUIRED)
FIND_PACKAGE (Boost COMPONENTS system REQUIRED)

LINK_LIBRARIES (Threads::Threads ${Boost_LIBRARIES} ws2_32 wsock32)
ADD_EXECUTABLE (Client client.cpp message.h)
ADD_EXECUTABLE (Server server.cpp message.h)
