SET (TARGET_NAME Lab2Server)

FILE (GLOB SOURCE_FILES *.cpp)
FILE (GLOB HEADER_FILES *.h)

ADD_EXECUTABLE (${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE ${wxWidgets_LIBRARIES} OpenSSL::Crypto PugiXML)

IF (WIN32)
	TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE ws2_32 wsock32)
ENDIF ()
