SET (TARGET_NAME Arduino)

FILE (GLOB_RECURSE SOURCE_FILES *.cpp)
FILE (GLOB_RECURSE HEADER_FILES *.h)

ADD_EXECUTABLE (${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})

TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} SYSTEM PRIVATE ${Boost_INCLUDE_DIR})
TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE Boost::system ${Poco_LIBRARIES})

IF (MINGW)
	TARGET_LINK_LIBRARIES(${TARGET_NAME} PRIVATE ws2_32)
ENDIF ()

INSTALL (TARGETS ${TARGET_NAME})
