SET (TARGET_NAME TestsModel)

FILE (GLOB_RECURSE SOURCE_FILES *.cpp)
FILE (GLOB_RECURSE HEADER_FILES *.h)

ADD_EXECUTABLE (${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})

TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} SYSTEM PRIVATE ${Boost_INCLUDE_DIR})
TARGET_LINK_LIBRARIES (${TARGET_NAME} PRIVATE Server ${Poco_LIBRARIES} Boost::unit_test_framework)
